# rzn-tools

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  INSTALLATION.md  Makefile  README.md  REDDIT_CONNECTOR_FEATURE_REQUESTS.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  connector_request.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  AUTH_DESIGN.md  CLI_DESIGN.md  CONNECTORS.md  CONNECTOR_DEVELOPMENT.md  FEATURES.md  FEDERATED_SEARCH.md  SMART_RESOLVER.md  llms.txt  macos_automation.md
docs/auth/: README.md
docs/connectors/: README.md  TEMPLATE.md  TOOLING_GUIDELINES.md  app_store.md  app_store_connect.md  apple_pim.md  x.md  (+34 more)
packaging/: README.md
rzn_tools_cli/: Cargo.toml  README.md
rzn_tools_cli/src/: cli.rs  feature_hints.rs  main.rs
rzn_tools_cli/src/commands/: config.rs  connectors.rs  fetch.rs  get.rs  ingest.rs  list.rs  mod.rs  pricing.rs  report.rs  search.rs  serve.rs  setup.rs  skills.rs  tool_mapping_audit.rs  tool_mappings.rs  tools.rs  usage.rs  usage_helpers.rs  workflows.rs
rzn_tools_cli/src/output/: mod.rs  pretty.rs
rzn_tools_cli/src/tui/: mod.rs
rzn_tools_core/: Cargo.toml  pricing.toml
rzn_tools_core/examples/: arxiv.rs  content_access_example.rs  drive_poc.rs  graph_poc.rs  hackernews.rs  mcp_client_example.rs  pubmed.rs  pubmed_connector.rs  reddit.rs  scihub_connector.rs  search_eval.rs  semantic_scholar.rs  structured_check.rs  web.rs  wikipedia_example.rs  x_connector.rs  youtube.rs
rzn_tools_core/src/: auth.rs  auth_store.rs  capabilities.rs  cpu_pool.rs  error.rs  flow_failure.rs  ingest.rs  lib.rs  logging.rs  mcp_server.rs  metered.rs  oauth.rs  oauth_client.rs  paths.rs  prompts.rs  resolver.rs  resources.rs  system_metadata.rs  tools.rs  transport.rs  usage.rs  usage_context.rs  utils.rs
rzn_tools_core/src/connectors/: federated.rs  mod.rs
rzn_tools_core/src/connectors/anthropic_search/: mod.rs
rzn_tools_core/src/connectors/app_store/: mod.rs
rzn_tools_core/src/connectors/app_store_connect/: mod.rs
rzn_tools_core/src/connectors/apple_common/: mod.rs
rzn_tools_core/src/connectors/apple_contacts/: mod.rs
rzn_tools_core/src/connectors/apple_health/: NOT_READY.md  mod.rs
rzn_tools_core/src/connectors/apple_mail/: mod.rs
rzn_tools_core/src/connectors/apple_messages/: alias_store.rs  mod.rs
rzn_tools_core/src/connectors/apple_notes/: mod.rs
rzn_tools_core/src/connectors/apple_reminders/: mod.rs
rzn_tools_core/src/connectors/apple_search_ads/: mod.rs
rzn_tools_core/src/connectors/arxiv/: mod.rs
rzn_tools_core/src/connectors/atlassian/: mod.rs
rzn_tools_core/src/connectors/bing_webmaster_tools/: mod.rs
rzn_tools_core/src/connectors/biorxiv/: mod.rs
rzn_tools_core/src/connectors/caldav/: mod.rs
rzn_tools_core/src/connectors/discord/: mod.rs
rzn_tools_core/src/connectors/exa_search/: mod.rs
rzn_tools_core/src/connectors/firecrawl_search/: mod.rs
rzn_tools_core/src/connectors/gemini_search/: mod.rs
rzn_tools_core/src/connectors/github/: mod.rs
rzn_tools_core/src/connectors/google_calendar/: mod.rs
rzn_tools_core/src/connectors/google_drive/: mod.rs
rzn_tools_core/src/connectors/google_gmail/: mod.rs
rzn_tools_core/src/connectors/google_people/: mod.rs
rzn_tools_core/src/connectors/google_scholar/: mod.rs
rzn_tools_core/src/connectors/google_search_console/: mod.rs
rzn_tools_core/src/connectors/hackernews/: mod.rs  types.rs
rzn_tools_core/src/connectors/imap/: mod.rs
rzn_tools_core/src/connectors/kalshi/: mod.rs
rzn_tools_core/src/connectors/linkedin/: mod.rs
rzn_tools_core/src/connectors/localfs/: mod.rs  types.rs
rzn_tools_core/src/connectors/localfs/extractors/: code.rs  docx.rs  epub.rs  html.rs  markdown.rs  mod.rs  pdf.rs  plaintext.rs
rzn_tools_core/src/connectors/macos/: mod.rs
rzn_tools_core/src/connectors/microsoft/: mod.rs
rzn_tools_core/src/connectors/openai_search/: mod.rs
rzn_tools_core/src/connectors/parallel_search/: mod.rs
rzn_tools_core/src/connectors/perplexity_search/: mod.rs
rzn_tools_core/src/connectors/play_store/: mod.rs
rzn_tools_core/src/connectors/polymarket/: mod.rs
rzn_tools_core/src/connectors/pubmed/: mod.rs  parse.rs
rzn_tools_core/src/connectors/reddit/: mod.rs
rzn_tools_core/src/connectors/rss/: mod.rs
rzn_tools_core/src/connectors/scihub/: mod.rs
rzn_tools_core/src/connectors/semantic_scholar/: mod.rs
rzn_tools_core/src/connectors/serpapi_search/: mod.rs
rzn_tools_core/src/connectors/serper_search/: mod.rs
rzn_tools_core/src/connectors/slack/: mod.rs
rzn_tools_core/src/connectors/smtp/: mod.rs
rzn_tools_core/src/connectors/spotlight/: mod.rs
rzn_tools_core/src/connectors/tavily_search/: mod.rs
rzn_tools_core/src/connectors/telegram/: mod.rs
rzn_tools_core/src/connectors/weather/: mod.rs
rzn_tools_core/src/connectors/web/: mod.rs
rzn_tools_core/src/connectors/whatsapp/: mod.rs
rzn_tools_core/src/connectors/wikipedia/: mod.rs
rzn_tools_core/src/connectors/x/: mod.rs
rzn_tools_core/src/connectors/x_browser/: mod.rs
rzn_tools_core/src/connectors/xai_search/: mod.rs
rzn_tools_core/src/connectors/youtube/: mod.rs
rzn_tools_core/src/display/: from_normalized.rs  mod.rs  v1.rs
rzn_tools_core/src/federated/: engine.rs  mod.rs  profiles.rs  types.rs
rzn_tools_core/tests/: launcher_integration.rs  normalized_conformance.rs  resolver_tests.rs  system_metadata_conformance.rs
rzn_tools_core/tests/fixtures/: reddit_user_about.json
rzn_tools_core/tests/fixtures/normalized/: arxiv_search.json  biorxiv_list.json  hackernews_get.json  pubmed_search.json  reddit_list.json  rss_list.json  web_get.json  wikipedia_search.json  youtube_search.json
rzn_tools_mcp/: Cargo.toml  README.md  mcp_config.example.toml
rzn_tools_mcp/src/: http.rs  lib.rs  main.rs
scrapable_derive/: Cargo.toml
scripts/: generate_release_notes.py  publish_rzn_tools_release.py  release.py  retitle_github_releases.py
(+49 files in other folders)
