[workspace]
resolver = "2"
members = [
    "rzn_tools_core",
    "rzn_tools_cli",
    "rzn_tools_mcp",
    "scrapable_derive",
]
default-members = ["rzn_tools_cli"]

[workspace.package]
edition = "2021"
rust-version = "1.75.0"
license = "AGPL-3.0-only"
repository = "https://github.com/srv1n/rzn-tools"

[workspace.lints.rust]
unsafe_code = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
# Standard warnings - allow some common patterns for initial release
all = { level = "warn", priority = -1 }
# Allow patterns common in this codebase
redundant_closure = "allow"
redundant_closure_for_method_calls = "allow"
manual_flatten = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[patch.crates-io]
rusty_ytdl = { path = "vendor/rusty_ytdl" }
roux = { path = "vendor/roux" }
grammers-session = { path = "vendor/grammers-session" }
agent-twitter-client = { path = "vendor/agent-twitter-client" }

[profile.release]
opt-level = "z"    # Optimize for size over speed
lto = true
codegen-units = 1
panic = "abort"
strip = true       # Remove debug symbols
overflow-checks = false
debug = false      # Disable debug info
rpath = false      # Disable rpath
incremental = false # Disable incremental compilation
