[package]
name = "rzn_tools_core"
version = "0.2.17"
edition = "2021"
description = "Core library for rzn-tools - unified data source connectors"
license = "AGPL-3.0-only"
readme = "../README.md"
repository = "https://github.com/srv1n/rzn-tools"
keywords = ["mcp", "data", "connectors", "scraping", "api"]
categories = ["api-bindings", "web-programming"]

[dependencies]
# Core dependencies (always on) - optimized for binary size
async-trait = "0.1.89"
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
toml = "0.9.10"
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "io-std", "process"] }
thiserror = "1.0.69"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "cookies", "rustls-tls"] }
reqwest011 = { package = "reqwest", version = "0.11.27", default-features = false, optional = true }
rayon = "1.10"
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
regex = { version = "1.11.3", default-features = false, features = ["std", "perf"] }
chrono = { version = "0.4.41", default-features = false, features = ["std", "clock"] }
url = { version = "2.5.7", default-features = false, features = ["serde"] }
rmcp = "0.8.0"

# Data source specific (mark connector deps optional)
# Using forked rookie with rusqlite compatible with libsqlite3-sys v0.30 (for sqlx compatibility)
rookie = { git = "https://github.com/srv1n/rookie", branch = "main", optional = true }
roux = { version = "2.2.15", optional = true }
agent-twitter-client = { version = "0.1.2", optional = true }
yt-transcript-rs = { version = "0.1.8", optional = true }
rusty_ytdl = { version = "0.7.4", optional = true }
scraper = { version = "0.18.1", optional = true }
htmd = { version = "0.1.6", optional = true }
urlencoding = "2.1.3"
meta_fetcher = { version = "0.1.1", optional = true }
schemars = { version = "0.8.22", features = ["derive"] }
quick-xml = { version = "0.31.0", optional = true }
zip = { version = "2.2.2", optional = true }
base64 = "0.21.7"
hmac = "0.12.1"
sha1 = "0.10.6"
flate2 = { version = "1.1.5", default-features = false, features = ["rust_backend"], optional = true }
jsonwebtoken = { version = "9.3.1", default-features = false, features = ["use_pem"], optional = true }
uuid = { version = "1.11", features = ["v4"], optional = true }
wikipedia = { version = "0.5.0", optional = true }
termimad = "0.25.7"
publicsuffix = { version = "2.3.0", optional = true }
once_cell = "1.21.3"
futures = "0.3.31"
html-escape = "0.2.13"
imap = { version = "3.0.0-alpha.15", optional = true }
imap-proto = { version = "0.16.6", optional = true }
mailparse = { version = "0.16.1", optional = true }
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"], optional = true }
octocrab = { version = "0.32.0", optional = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"], optional = true }
feed-rs = { version = "1.5", optional = true }
lopdf = { version = "0.36", default-features = false, optional = true }
grammers-client = { version = "0.8.1", optional = true }
grammers-mtsender = { version = "0.8.1", optional = true }
grammers-session = { version = "0.8.0", optional = true }

# Phase 1: Microsoft Graph and Google Drive (optional, behind features)
graph-rs-sdk = { version = "0.3.1", optional = true }
yup-oauth2   = { version = "9.0.0", optional = true }
google-drive3 = { version = "5.0.5", optional = true }
# Google SDKs (additional)
google-gmail1 = { version = "5.0.5", optional = true }
google-calendar3 = { version = "5.0.5", optional = true }
google-people1 = { version = "5.0.5", optional = true }
# HTTP client for Google hubs
hyper = { version = "0.14.32", features = ["full"], optional = true }
hyper-rustls = { version = "0.27.7", optional = true }
dirs = { version = "5.0.1" }

# Local dependencies
scrapable_derive = { path = "../scrapable_derive" }

[features]
default = []
examples = []
full = ["all-connectors"]
all-connectors = [
    "youtube", "reddit", "hackernews", "wikipedia", "arxiv", "pubmed", "play-store", "app-store",
    "app-store-connect", "apple-search-ads",
    "semantic-scholar", "web", "x-twitter", "x-api", "scihub", "imap", "smtp", "caldav",
    "microsoft-graph", "google-drive", "google-gmail", "google-calendar", "google-people",
    "google-search-console", "bing-webmaster-tools", "linkedin",
    "slack", "github", "atlassian",
    "openai-search", "anthropic-search", "gemini-search", "perplexity-search",
    "xai-search", "exa-search", "firecrawl-search", "serper-search", "tavily-search", "serpapi-search",
    "parallel-search",
    "macos-automation", "macos-spotlight",
    "biorxiv", "rss", "weather", "polymarket", "kalshi", "discord", "google-scholar", "localfs",
    "whatsapp", "telegram"
]
# NOTE: "apple-health" is excluded - HealthKit APIs exist on macOS 14+ but
# isHealthDataAvailable() returns false (no Health app/data store on Mac yet)

# Feature-to-dependency wiring per connector
biorxiv = []
rss = ["dep:feed-rs", "dep:scraper"]
weather = []
polymarket = []
kalshi = []
discord = ["dep:serenity"]
google-scholar = ["dep:scraper"]
youtube = ["dep:yt-transcript-rs", "dep:rusty_ytdl", "dep:quick-xml"]
reddit = ["dep:roux"]
play-store = []
app-store = []
app-store-connect = ["dep:flate2", "dep:jsonwebtoken"]
apple-search-ads = ["dep:jsonwebtoken"]
hackernews = []
wikipedia = ["dep:wikipedia"]
arxiv = ["dep:quick-xml"]
pubmed = ["dep:quick-xml", "dep:scraper"]
semantic-scholar = []
semantic_scholar = ["semantic-scholar"]
web = ["dep:scraper", "dep:htmd", "dep:meta_fetcher", "browser-cookies"]
x-twitter = ["dep:agent-twitter-client", "dep:reqwest011", "browser-cookies"]
x-browser = ["x-twitter"]
x = ["x-api"]
x-api = []
scihub = []

# iOS-friendly variants (no desktop-only dependencies like browser cookie extraction)
# Use these on platforms without desktop browsers (iOS, etc.)
web-lite = ["dep:scraper", "dep:htmd", "dep:meta_fetcher"]
x-lite = ["dep:agent-twitter-client"]
imap = ["dep:imap", "dep:imap-proto", "dep:mailparse"]
smtp = ["dep:lettre"]
caldav = ["dep:quick-xml"]
macos-automation = ["dep:osakit"]
macos-spotlight = []  # Uses mdfind CLI, no extra dependencies needed
slack = []
whatsapp = []
telegram = ["dep:grammers-client", "dep:grammers-mtsender", "dep:grammers-session"]

# EXPERIMENTAL - NOT READY FOR USE
# apple-health: HealthKit framework exists on macOS 14+ but the Health data store
# is not available (isHealthDataAvailable() returns false). Code is preserved in
# rzn_tools_core/src/connectors/apple_health/ for future use when Apple enables this.
# See: rzn_tools_core/src/connectors/apple_health/NOT_READY.md
# apple-health = ["dep:objc2-health-kit", "dep:objc2-foundation", "dep:objc2", "dep:block2"]
github = ["dep:octocrab"]
atlassian = []

# LLM provider web search connectors
openai-search = []
anthropic-search = []
gemini-search = []
perplexity-search = []
xai-search = []
exa-search = []
firecrawl-search = []
serper-search = []
tavily-search = []
serpapi-search = []
parallel-search = []

# New Phase 1 connectors
microsoft-graph = ["dep:graph-rs-sdk"]
google-drive = ["dep:google-drive3", "dep:yup-oauth2", "dep:hyper", "dep:hyper-rustls"]
google-gmail = ["dep:google-gmail1", "dep:yup-oauth2", "dep:hyper", "dep:hyper-rustls", "dep:mailparse"]
google-calendar = ["dep:google-calendar3", "dep:yup-oauth2", "dep:hyper", "dep:hyper-rustls", "dep:uuid"]
google-people = ["dep:google-people1", "dep:yup-oauth2", "dep:hyper", "dep:hyper-rustls"]
google-search-console = []
bing-webmaster-tools = []
linkedin = ["dep:jsonwebtoken"]

# Local filesystem connector
localfs = ["dep:lopdf", "dep:zip", "dep:quick-xml", "dep:scraper", "dep:htmd"]

# Browser cookie extraction
browser-cookies = ["dep:rookie", "dep:publicsuffix"]

# Apple Ecosystem connectors (macOS only)
# These use AppleScript to interact with native macOS apps
# No extra dependencies - just platform-gated compilation
apple-mail = []      # Mail.app - read, send, draft emails
apple-notes = []     # Notes.app - create, read, search notes
apple-messages = []  # Messages.app - iMessage and SMS
apple-reminders = [] # Reminders.app - task management
apple-contacts = []  # Contacts.app - contact lookup
# Composite feature to enable all Apple connectors
apple-ecosystem = ["apple-mail", "apple-notes", "apple-messages", "apple-reminders", "apple-contacts"]

# Composite, LLM-friendly macro tools (optional)
llm-macros = []

[[example]]
name = "arxiv"
required-features = ["examples", "arxiv"]

[[example]]
name = "content_access_example"
required-features = ["examples"]

[[example]]
name = "hackernews"
required-features = ["examples", "hackernews"]

[[example]]
name = "mcp_client_example"
required-features = ["examples"]

[[example]]
name = "pubmed"
required-features = ["examples", "pubmed"]

[[example]]
name = "pubmed_connector"
required-features = ["examples", "pubmed"]

[[example]]
name = "reddit"
required-features = ["examples", "reddit"]

[[example]]
name = "scihub_connector"
required-features = ["examples", "scihub"]

[[example]]
name = "semantic_scholar"
required-features = ["examples", "semantic-scholar"]

[[example]]
name = "structured_check"
required-features = ["examples"]

[[example]]
name = "web"
required-features = ["examples", "web"]

[[example]]
name = "wikipedia_example"
required-features = ["examples", "wikipedia"]

[[example]]
name = "x_connector"
required-features = ["examples", "x"]

[[example]]
name = "youtube"
required-features = ["examples", "youtube"]

[[example]]
name = "graph_poc"
required-features = ["examples", "microsoft-graph"]

[[example]]
name = "drive_poc"
required-features = ["examples", "google-drive"]

[[example]]
name = "search_eval"
required-features = ["examples"]
# Target-specific optional deps
[target.'cfg(target_os = "macos")'.dependencies]
osakit = { version = "0.2.3", optional = true }
objc2-health-kit = { version = "0.2", optional = true, features = ["all"] }
objc2-foundation = { version = "0.2", optional = true, features = [
    "NSDate", "NSSet", "NSString", "NSError", "NSPredicate", "NSSortDescriptor",
    "NSArray", "NSObject", "NSValue"
] }
objc2 = { version = "0.5", optional = true }
block2 = { version = "0.5", optional = true }
